<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ilmostro</groupId> 
    <artifactId>java-tutorial</artifactId>

    <version>1.0-SNAPSHOT</version>
    <name>java-tutorial</name>
    <packaging>pom</packaging>
    <description>Java的一些集成以及测试</description>

    <properties>
        <springboot.version>2.4.8</springboot.version>
        <spring-data.version>2021.1.4</spring-data.version>
        <spring-cloud.version>2020.0.3</spring-cloud.version>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <fastjson.version>1.2.71</fastjson.version>
        <guava.version>23.0</guava.version>
        <common-lang.version>2.6</common-lang.version>
        <hutool.version>4.5.7</hutool.version>
        <vertx.version>4.1.2</vertx.version>
        <roaring-bitmap.version>0.8.1</roaring-bitmap.version>
        <kryo5.version>5.3.0</kryo5.version>
        <apache-common-io.version>1.3.2</apache-common-io.version>
        <jwt.version>0.10.7</jwt.version>
        <jctools.version>3.3.0</jctools.version>
        <jmh.version>1.35</jmh.version>
        <contiperf.version>2.3.4</contiperf.version>
    </properties>

    <modules>
        <module>flink-tutorial</module>
        <module>java-basic</module>
        <module>spring-boot-webflux</module>
        <module>quarkus-tutorial</module>
        <module>spring-boot-mysql</module>
        <module>spring-boot-redis</module>
        <module>spring-boot-pure</module>
        <module>spring-boot-rabbit</module>
		<module>hadoop-tutorial</module>
        <module>spring-cloud-sample</module>
	</modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-bom</artifactId>
                <version>${spring-data.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
